# mlgui

./: .gitignore  README.md  pyproject.toml
src/: data_handler.py  main.py  model_handler.py  page_manager.py  test_file.csv
